--- a/mainapp/templates/mainapp/includes/inc_categories_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_categories_menu.html
@@ -1,6 +1,8 @@
 <ul class="links-menu">
 {% for link in links_menu %}
-    <li><a href="{% url link.href %}" {% if request.resolver_match.url_name == link.href %} class="active" {% endif %}>{{link.name}}</a></li>
-{% endfor %}
+    <li><a href="{% url 'products:category' link.pk  %}"
+           {% if request.resolver_match.kwargs.pk == link.id%} class="active" {% endif %}>{{link.name}}</a></li>
 
+{% endfor %}
+{{request.resolver_match}}
 </ul>
