--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -9,6 +9,7 @@
             {% include 'mainapp/includes/inc_main_menu.html'%}
         </ul>
         <a href="#" class="search"></a>
+        <a href="#" class="basket"></a>
     </div>
     <div class="text-slider">
         <h3 class="green">тенденции</h3>
