--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -1,12 +1,13 @@
-{% load static %}
+
 
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
     <meta charset="utf-8">
     <title>{{ title|title|default:"Мой магазин" }}</title>
     {% block css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static '/fonts/font-awesome/css/font-awesome.css' %}">
     {% endblock %}
 </head>
