--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -1,16 +1,25 @@
-<li><a href="{% url 'main' %}"
-       {% if request.resolver_match.url_name == 'main' %} class="active" {% endif %}>домой</a></li>
+<a href="{% url 'main' %}" class="logo"></a>
+<ul class="menu">
 
-<li><a href="{% url 'products:products' %}"
-       {% if 'products' in request.resolver_match.namespaces  %} class="active" {% endif %}>продукты </a></li>
-<li><a href="{% url 'contact' %}"
-       {% if request.resolver_match.url_name == 'contact' %} class="active" {% endif %}>контакты</a></li>
-{% if  user.is_authenticated %}
-<li><a href="{% url 'auth:edit'%}">
-    {{user.username|default:"Пользователь"}}
+    <li><a href="{% url 'main' %}"
+           {% if request.resolver_match.url_name == 'main' %} class="active" {% endif %}>домой</a></li>
+
+    <li><a href="{% url 'products:products' %}"
+           {% if 'products' in request.resolver_match.namespaces %} class="active" {% endif %}>продукты </a></li>
+    <li><a href="{% url 'contact' %}"
+           {% if request.resolver_match.url_name == 'contact' %} class="active" {% endif %}>контакты</a></li>
+    {% if user.is_authenticated %}
+    <li><a href="{% url 'auth:edit'%}">
+        {{user.username|default:"Пользователь"}}
     </a></li>
 
-<li><a href="{% url 'auth:logout' %}">выход</a></li>
-{% else %}
-<li><a href="{% url 'auth:login' %}">вход</a></li>
-{% endif %}
+    <li><a href="{% url 'auth:logout' %}">выход</a></li>
+    {% else %}
+    <li><a href="{% url 'auth:login' %}">вход</a></li>
+    {% endif %}
+</ul>
+<a href="#" class="search"></a>
+<a href="{%url 'basket:view' %}" class="basket">
+
+<span>{{ basket }}  </span>
+</a>
