--- a/mainapp/templates/mainapp/includes/inc_categories_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_categories_menu.html
@@ -1,8 +1,8 @@
 <ul class="links-menu">
-    <li><a href="/products/0/" {% if request.resolver_match.kwargs.pk == 0 %} class="active" {% endif %}>все </a></li>
+    <li><a href="/products/category/0/" {% if request.resolver_match.kwargs.pk == 0 %} class="active" {% endif %}>все </a></li>
 
 {% for link in links_menu %}
-    <li><a href="/products/{{link.pk}}/"
+    <li><a href="/products/category/{{link.pk}}/"
            {% if request.resolver_match.kwargs.pk == link.id%} class="active" {% endif %}>{{link.name}}</a></li>
 
 {% endfor %}
