--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -4,7 +4,7 @@
     <li><a href="{% url 'main' %}"
            {% if request.resolver_match.url_name == 'main' %} class="active" {% endif %}>домой</a></li>
 
-    <li><a href="{% url 'products:products' %}"
+    <li><a href="{% url 'products:index' %}"
            {% if 'products' in request.resolver_match.namespaces %} class="active" {% endif %}>продукты </a></li>
     <li><a href="{% url 'contact' %}"
            {% if request.resolver_match.url_name == 'contact' %} class="active" {% endif %}>контакты</a></li>
@@ -21,5 +21,9 @@
 <a href="#" class="search"></a>
 <a href="{%url 'basket:view' %}" class="basket">
 
-<span>{{ basket }}  </span>
+<span>
+    {% if basket %}
+    {{ basket.0.total_cost|floatformat:2}}руб. ({{ basket.0.total_quantity }}шт.)
+    {% endif %}
+</span>
 </a>
