--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -27,17 +27,17 @@
     <div class="tab-content">
         {% for product in products %}
 
-        <div class="block">
-            <a href="#">
-                <img src="/media/{{product.image}}" alt="{{product.name }}">
-                <div class="text">
-                    <img src="{% static '/img/icon-hover.png'%}" alt="{{product.name}}">
-                    <h4>{{product.name }}</h4>
-                    <p>{{product.short_desc}} </p>
-                </div>
-            </a>
-        </div>
-        {%endfor%}
+            <div class="block">
+                <a href="{% url 'products:product' product.pk %}">
+                    <img src="/media/{{product.image}}" alt="{{product.name }}">
+                    <div class="text">
+                        <img src="{% static '/img/icon-hover.png'%}" alt="{{product.name}}">
+                        <h4>{{product.name }}</h4>
+                        <p>{{product.short_desc}} </p>
+                    </div>
+                </a>
+            </div>
+        {% endfor %}
     </div>
 </div>
 
