--- a/adminapp/templates/adminapp/category_delete.html
+++ b/adminapp/templates/adminapp/category_delete.html
@@ -5,17 +5,17 @@
 {% block content %}
   <div class="category_delete">
     Уверены, что хотите
-    {% if category_to_delete.is_active%}
+    {% if object.is_active%}
     удалить
     {% else %}
     восстановить
     {% endif %}
-    {{ category_to_delete}}?
+    {{ object}}?
 
-    <form action="{% url 'admin:category_delete' category_to_delete.pk %}"
+    <form action="{% url 'admin:category_delete' object.pk %}"
           method="post">
       {% csrf_token %}
-      {% if category_to_delete.is_active%}
+      {% if object.is_active%}
       <input class="btn btn-danger" type="submit" value="удалить">
       {% else %}
       <input class="btn btn-primary" type="submit" value="восстановить">
