--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -1,3 +1,5 @@
+
+
 <ul class="menu">
     <li>
         <a href="{% url 'main' %}">на сайт</a>
@@ -7,9 +9,9 @@
     </li>
     <li>
         <a class="{% if 'category' in request.resolver_match.url_name or 'product' in request.resolver_match.url_name %}active{% endif %}"href={% url 'admin:category_read' %}>
-            категории
-            {% if category %}
-                :{{category.name}}
+            категории 
+            {% if object.category %}
+                :{{object.category.name}}
             {% endif %}
 
 
