--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -3,13 +3,16 @@
 
 {% block content %}
 <div class="products_list">
+
     <button class="new_product">
-        <a href="{% url 'admin:product_create' category.pk %}">
+
+        <a href="{% url 'admin:product_create' object.category_pk%} ">
             новый продукт
         </a>
+
     </button>
 
-    {% for object in objects %}
+    {% for object in object_list %}
     <div class="product_record {%if not object.is_active%}not_active{%endif%}">
         <img src="/media/{{object.image|default:'products_images/default.jpg'}}"
              alt="{{ object.name }}">
