--- a/adminapp/templates/adminapp/user_delete.html
+++ b/adminapp/templates/adminapp/user_delete.html
@@ -12,10 +12,10 @@
       {% endif %})
     {% endif %}
     ?
-    <form action="{% url 'admin:user_delete' user_to_delete.pk %}"
+    <form action="{% url 'admin:user_delete' object.pk %}"
           method="post">
       {% csrf_token %}
-      {% if user_to_delete.is_active%}
+      {% if object.is_active%}
       <input class="btn btn-danger" type="submit" value="удалить">
       {% else %}
       <input class="btn btn-primary" type="submit" value="восстановить">
