--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -6,7 +6,7 @@
         <button class="new_user">
             <a href="{% url 'admin:user_create' %}">новый пользователь</a>
         </button>
-        {% for object in objects %}
+        {% for object in object_list %}
 
             <div class="user_record {% if not object.is_active %}not_active{% endif%}">
                 <img src="/media/{{object.avatar|default:'user_avatars/default.jpg'}}"/>
