--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -16,9 +16,9 @@
 
     <div class="products_list">
         <div class="title clearfix">
-            <h2>
-                 Категория: "{{ category.name|title }}"
-            </h2>
+            <h2>Категория: "{{ category.name|title }}"</h2>
+
+
         </div>
         <div class="category-products clearfix">
             {% for product in products %}
@@ -36,7 +36,19 @@
             {% endfor %}
 
         </div>
+<br>
+            <div class="paginator">
+                {% if products.has_previous%}
+                <a href="{% url 'products:category' category.pk %}?p={{products.previous_page_number}}"> < </a>
+                {% endif %}
+                <span class="current">
+                    страница {{products.number}} из {{products.paginator.num_pages}}
+                </span>
 
+                {% if products.has_next%}
+                <a href="{% url 'products:category' category.pk %}?p={{products.next_page_number}}"> > </a>
+                {%endif%}
+            </div>
     </div>
 </div>
 <div class="clr"></div>
