--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -1,20 +1,23 @@
 {% extends 'adminapp/base.html' %}
 {% load static %}
+{% load my_tags %}
+
+
 
 {% block content %}
 <div class="products_list">
 
     <button class="new_product">
 
-        <a href="{% url 'admin:product_create' object.category_pk%} ">
-            новый продукт
+        <a href="#">
+            новый продукт{{object_list.0.category.pk}}
         </a>
 
     </button>
 
     {% for object in object_list %}
     <div class="product_record {%if not object.is_active%}not_active{%endif%}">
-        <img src="/media/{{object.image|default:'products_images/default.jpg'}}"
+        <img src="{{object.image|media_for_products}}"
              alt="{{ object.name }}">
         <div class="product_name">
             {{ object.name|title }}
