--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -5,6 +5,7 @@
         {% csrf_token %}
 
         {{ edit_form.as_p }}
+        {{ profile_form.as_p }}
         <input type="submit" value="сохранить" class="form-control" />
     </form>
     <br>
