--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -9,17 +9,35 @@
     <li><a href="{% url 'contact' %}"
            {% if request.resolver_match.url_name == 'contact' %} class="active" {% endif %}>контакты</a></li>
 
-
     {% if user.is_authenticated %}
-    <li><a href="{% url 'auth:edit'%}">
-        {{user.username|default:"Пользователь"}}
-    </a></li>
+       <li>
+           <div class="dropdown">
+               <a class="dropdown-toggle" href="" data-toggle="dropdown">
+                   {{ user.first_name|default:'Пользователь' }}
+                   <span class="caret"></span>
+               </a>
+               <ul class="dropdown-menu">
+                   <li>
+                       <a href="{% url 'auth:edit' %}">
+                           профиль
+                       </a>
+                   </li>
+                   <li>
+                       <a href="{% url 'ordersapp:orders_list' %}">
+                           заказы
+                       </a>
+                   </li>
+               </ul>
+           </div>
+       </li>
     {% endif %}
     {% if user.is_superuser %}
-    <li><a href="{% url 'admin:users_read'%}">
-        админка
-    </a></li>
+       <li>
+           <a href="{% url 'admin:users' %}">админка</a>
+       </li>
     {% endif %}
+
+
 
     {% if user.is_authenticated %}
     <li><a href="{% url 'auth:logout' %}">выход</a></li>
