--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -33,7 +33,7 @@
     {% endif %}
     {% if user.is_superuser %}
        <li>
-           <a href="{% url 'admin:users' %}">админка</a>
+           <a href="{% url 'admin:users_read' %}">админка</a>
        </li>
     {% endif %}
 
