--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -10,7 +10,7 @@
         <h3 class="green">тенденции</h3>
         <h3 class="big"> удобные стулья</h3>
         <p>Новый уровень комфорта. Отличные характеристики.</p>
-        <a href="#" class="button-order">заказать <img src="{% static '/img/arrow.png'%}" alt=""></a>
+        <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png'%}" alt=""></a>
     </div>
     <div class="navi">
         <a href="#"></a><a href="#"></a><a href="#"></a>
@@ -21,7 +21,7 @@
     <div class="featured-menu">
         <a class="active" href="#">Популярные</a><a href="#">Новинки</a>
     </div>
-    <a class="explore" href="#">показать все <img src="{% static '/img/arrow.png'%}" alt=""></a>
+    <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png'%}" alt=""></a>
     <div class="clearfix">
     </div>
     <div class="tab-content">
@@ -31,7 +31,7 @@
                 <a href="{% url 'products:product' product.pk %}">
                     <img src="/media/{{product.image}}" alt="{{product.name }}">
                     <div class="text">
-                        <img src="{% static '/img/icon-hover.png'%}" alt="{{product.name}}">
+                        <img src="{% static 'img/icon-hover.png'%}" alt="{{product.name}}">
                         <h4>{{product.name }}</h4>
                         <p>{{product.short_desc}} </p>
                     </div>
