--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -25,7 +25,7 @@
                 <div class="block">
                     <a href="{% url 'products:product' product.pk %}"><img src="/media/{{ product.image }}" alt="">
                         <div class="text">
-                            <img src="{% static '/img/icon-hover.png'%}" alt="img">
+                            <img src="{% static 'img/icon-hover.png'%}" alt="img">
                             <h4>Название: {{product.name}}</h4>
                             <p>Описание: {{product.description}}</p>
                             <p>Цена: {{product.price}} </p>
