--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -7,9 +7,9 @@
        {% include 'mainapp/includes/inc_main_menu.html'%}
     </div>
     <div class="text-slider">
-        <h3 class="green">тенденции</h3>
-        <h3 class="big"> удобные стулья</h3>
-        <p>Новый уровень комфорта. Отличные характеристики.</p>
+        <h3 class="green">лучшие тенденции</h3>
+        <h3 class="big"> удобный сайт</h3>
+        <p>Новый уровень комфорта покупок.</p>
         <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png'%}" alt=""></a>
     </div>
     <div class="navi">
