--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -39,7 +39,7 @@
             </form>
         </div>
     </div>
-    <p class="small">&copy; GB {% now "Y"%}</p>
+    <p class="small">&copy; Alex-Corp {% now "Y"%}</p>
     <div class="social">
         <a href="#" class="social1"></a>
         <a href="#" class="social2"></a>
