--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -10,7 +10,7 @@
         <h3 class="green">лучшие тенденции</h3>
         <h3 class="big"> удобный сайт</h3>
         <p>Новый уровень комфорта покупок.</p>
-        <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png'%}" alt=""></a>
+        <a href="/products" class="button-order">заказать <img src="{% static 'img/arrow.png'%}" alt=""></a>
     </div>
     <div class="navi">
         <a href="#"></a><a href="#"></a><a href="#"></a>
@@ -21,7 +21,7 @@
     <div class="featured-menu">
         <a class="active" href="#">Популярные</a><a href="#">Новинки</a>
     </div>
-    <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png'%}" alt=""></a>
+    <a class="explore" href="products.html">показать все <img src="{% static 'img/arrow.png'%}" alt=""></a>
     <div class="clearfix">
     </div>
     <div class="tab-content">
